Final changes to reload functionality